// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Slider Component Snapshots should match snapshot when isLoading is true 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#b8c0c9ff",
          },
          {
            "borderRadius": 0,
            "height": 280,
            "width": 750,
          },
          undefined,
          {
            "opacity": 0.3,
          },
        ]
      }
    />
    <View
      style={
        {
          "bottom": 32,
          "left": 20,
          "position": "absolute",
          "right": 20,
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#b8c0c9ff",
            },
            {
              "borderRadius": 4,
              "height": 12,
              "width": "35%",
            },
            {
              "marginBottom": 8,
            },
            {
              "opacity": 0.3,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#b8c0c9ff",
            },
            {
              "borderRadius": 6,
              "height": 22,
              "width": "70%",
            },
            undefined,
            {
              "opacity": 0.3,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "bottom": 16,
          "flexDirection": "row",
          "position": "absolute",
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#b8c0c9ff",
            },
            {
              "borderRadius": 3,
              "height": 6,
              "width": 6,
            },
            {
              "marginHorizontal": 3,
            },
            {
              "opacity": 0.3,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#b8c0c9ff",
            },
            {
              "borderRadius": 3,
              "height": 6,
              "width": 20,
            },
            {
              "marginHorizontal": 3,
            },
            {
              "opacity": 0.3,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#b8c0c9ff",
            },
            {
              "borderRadius": 3,
              "height": 6,
              "width": 6,
            },
            {
              "marginHorizontal": 3,
            },
            {
              "opacity": 0.3,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot when isLoading is true with existing data 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#b8c0c9ff",
          },
          {
            "borderRadius": 0,
            "height": 280,
            "width": 750,
          },
          undefined,
          {
            "opacity": 0.3,
          },
        ]
      }
    />
    <View
      style={
        {
          "bottom": 32,
          "left": 20,
          "position": "absolute",
          "right": 20,
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#b8c0c9ff",
            },
            {
              "borderRadius": 4,
              "height": 12,
              "width": "35%",
            },
            {
              "marginBottom": 8,
            },
            {
              "opacity": 0.3,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#b8c0c9ff",
            },
            {
              "borderRadius": 6,
              "height": 22,
              "width": "70%",
            },
            undefined,
            {
              "opacity": 0.3,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "bottom": 16,
          "flexDirection": "row",
          "position": "absolute",
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#b8c0c9ff",
            },
            {
              "borderRadius": 3,
              "height": 6,
              "width": 6,
            },
            {
              "marginHorizontal": 3,
            },
            {
              "opacity": 0.3,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#b8c0c9ff",
            },
            {
              "borderRadius": 3,
              "height": 6,
              "width": 20,
            },
            {
              "marginHorizontal": 3,
            },
            {
              "opacity": 0.3,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#b8c0c9ff",
            },
            {
              "borderRadius": 3,
              "height": 6,
              "width": 6,
            },
            {
              "marginHorizontal": 3,
            },
            {
              "opacity": 0.3,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with autoPlayInterval set to 0 (disabled) 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "id": "slider-1",
          "image": "https://example.com/slide1.jpg",
          "subtitle": "Diskon hingga 50% untuk produk pilihan",
          "title": "Promo Spesial Elekronik",
        },
        {
          "id": "slider-2",
          "image": "https://example.com/slide2.jpg",
          "subtitle": "Tampil bergaya dengan tren terkini",
          "title": "Koleksi Fashion Terbaru",
        },
        {
          "id": "slider-3",
          "image": "https://example.com/slide3.jpg",
        },
      ]
    }
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/slide1.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 1,
                }
              }
            >
              Diskon hingga 50% untuk produk pilihan
            </GeneralText>
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Promo Spesial Elekronik
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/slide2.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 1,
                }
              }
            >
              Tampil bergaya dengan tren terkini
            </GeneralText>
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Koleksi Fashion Terbaru
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/slide3.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 16,
        "flexDirection": "row",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "#FFFFFF",
            "width": 20,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with custom autoPlayInterval 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "id": "slider-1",
          "image": "https://example.com/slide1.jpg",
          "subtitle": "Diskon hingga 50% untuk produk pilihan",
          "title": "Promo Spesial Elekronik",
        },
        {
          "id": "slider-2",
          "image": "https://example.com/slide2.jpg",
          "subtitle": "Tampil bergaya dengan tren terkini",
          "title": "Koleksi Fashion Terbaru",
        },
        {
          "id": "slider-3",
          "image": "https://example.com/slide3.jpg",
        },
      ]
    }
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/slide1.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 1,
                }
              }
            >
              Diskon hingga 50% untuk produk pilihan
            </GeneralText>
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Promo Spesial Elekronik
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/slide2.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 1,
                }
              }
            >
              Tampil bergaya dengan tren terkini
            </GeneralText>
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Koleksi Fashion Terbaru
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/slide3.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 16,
        "flexDirection": "row",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "#FFFFFF",
            "width": 20,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with empty props 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={[]}
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with empty string values in slider item properties 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "id": "empty-strings-1",
          "image": "",
          "subtitle": "",
          "title": "",
        },
      ]
    }
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 16,
        "flexDirection": "row",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "#FFFFFF",
            "width": 20,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with extremely long title and subtitle text 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "id": "long-text-1",
          "image": "https://example.com/long-text.jpg",
          "subtitle": "Super Long Subtitle Content Explaining Detailed Terms And Conditions For This Flash Sale Promo Banner",
          "title": "Extremely Long Promotional Banner Title Designed To Test Text Wrapping And Overlay Bounds In Image Slider",
        },
      ]
    }
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/long-text.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 1,
                }
              }
            >
              Super Long Subtitle Content Explaining Detailed Terms And Conditions For This Flash Sale Promo Banner
            </GeneralText>
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Extremely Long Promotional Banner Title Designed To Test Text Wrapping And Overlay Bounds In Image Slider
            </GeneralText>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 16,
        "flexDirection": "row",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "#FFFFFF",
            "width": 20,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with large dataset of slider items 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "id": "banner-1",
          "image": "https://example.com/banner-1.jpg",
          "title": "Banner 1",
        },
        {
          "id": "banner-2",
          "image": "https://example.com/banner-2.jpg",
          "title": "Banner 2",
        },
        {
          "id": "banner-3",
          "image": "https://example.com/banner-3.jpg",
          "title": "Banner 3",
        },
        {
          "id": "banner-4",
          "image": "https://example.com/banner-4.jpg",
          "title": "Banner 4",
        },
        {
          "id": "banner-5",
          "image": "https://example.com/banner-5.jpg",
          "title": "Banner 5",
        },
        {
          "id": "banner-6",
          "image": "https://example.com/banner-6.jpg",
          "title": "Banner 6",
        },
        {
          "id": "banner-7",
          "image": "https://example.com/banner-7.jpg",
          "title": "Banner 7",
        },
        {
          "id": "banner-8",
          "image": "https://example.com/banner-8.jpg",
          "title": "Banner 8",
        },
        {
          "id": "banner-9",
          "image": "https://example.com/banner-9.jpg",
          "title": "Banner 9",
        },
        {
          "id": "banner-10",
          "image": "https://example.com/banner-10.jpg",
          "title": "Banner 10",
        },
      ]
    }
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/banner-1.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Banner 1
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/banner-2.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Banner 2
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/banner-3.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Banner 3
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/banner-4.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Banner 4
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/banner-5.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Banner 5
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/banner-6.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Banner 6
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/banner-7.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Banner 7
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/banner-8.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Banner 8
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/banner-9.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Banner 9
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/banner-10.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Banner 10
            </GeneralText>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 16,
        "flexDirection": "row",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "#FFFFFF",
            "width": 20,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with single slider item 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "id": "slider-1",
          "image": "https://example.com/slide1.jpg",
          "subtitle": "Diskon hingga 50% untuk produk pilihan",
          "title": "Promo Spesial Elekronik",
        },
      ]
    }
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/slide1.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 1,
                }
              }
            >
              Diskon hingga 50% untuk produk pilihan
            </GeneralText>
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Promo Spesial Elekronik
            </GeneralText>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 16,
        "flexDirection": "row",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "#FFFFFF",
            "width": 20,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with slider item having subtitle only without title 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "id": "subtitle-only-1",
          "image": "https://example.com/subtitle-only.jpg",
          "subtitle": "Subtitle Without Title",
        },
      ]
    }
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/subtitle-only.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 1,
                }
              }
            >
              Subtitle Without Title
            </GeneralText>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 16,
        "flexDirection": "row",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "#FFFFFF",
            "width": 20,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with slider item having title only without subtitle 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "id": "title-only-1",
          "image": "https://example.com/title-only.jpg",
          "title": "Title Without Subtitle",
        },
      ]
    }
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/title-only.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Title Without Subtitle
            </GeneralText>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 16,
        "flexDirection": "row",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "#FFFFFF",
            "width": 20,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with slider items missing title and subtitle 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "id": "minimal-1",
          "image": "https://example.com/minimal.jpg",
        },
      ]
    }
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/minimal.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 16,
        "flexDirection": "row",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "#FFFFFF",
            "width": 20,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Image Slider Component Snapshots should match snapshot with valid sliders data and isLoading false 1`] = `
<View
  style={
    {
      "height": undefined,
      "position": "relative",
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "id": "slider-1",
          "image": "https://example.com/slide1.jpg",
          "subtitle": "Diskon hingga 50% untuk produk pilihan",
          "title": "Promo Spesial Elekronik",
        },
        {
          "id": "slider-2",
          "image": "https://example.com/slide2.jpg",
          "subtitle": "Tampil bergaya dengan tren terkini",
          "title": "Koleksi Fashion Terbaru",
        },
        {
          "id": "slider-3",
          "image": "https://example.com/slide3.jpg",
        },
      ]
    }
    decelerationRate="fast"
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    pagingEnabled={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={16}
    showsHorizontalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/slide1.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 1,
                }
              }
            >
              Diskon hingga 50% untuk produk pilihan
            </GeneralText>
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Promo Spesial Elekronik
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/slide2.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              [
                {
                  "bottom": 32,
                  "left": 20,
                  "position": "absolute",
                  "right": 20,
                },
                {
                  "opacity": 0,
                  "transform": [
                    {
                      "translateY": 16,
                    },
                  ],
                },
              ]
            }
          >
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 1,
                }
              }
            >
              Tampil bergaya dengan tren terkini
            </GeneralText>
            <GeneralText
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginTop": 4,
                }
              }
            >
              Koleksi Fashion Terbaru
            </GeneralText>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <Image
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/slide3.jpg",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            style={
              {
                "backgroundColor": "rgba(0, 0, 0, 0.35)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 16,
        "flexDirection": "row",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "#FFFFFF",
            "width": 20,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "marginHorizontal": 3,
          },
          {
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "width": 6,
          },
        ]
      }
    />
  </View>
</View>
`;
